Closed
Bug 591783
Opened 14 years ago
Closed 14 years ago
Can't install language packs in the latest nightlies (file appears to be corrupt)
Categories
(Toolkit Graveyard :: Build Config, defect)
Toolkit Graveyard
Build Config
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla2.0b5
People
(Reporter: flod, Assigned: dao)
References
Details
Attachments
(1 file)
1001 bytes,
patch
|
khuey
:
review+
|
Details | Diff | Splinter Review |
If I try to install a language pack from ftp.mozilla.org (also the en-US one from firefox/nightly/latest-mozilla-central) I get this error: "The add-on downloaded from ftp.mozilla.org could not be installed because it appears to be corrupt". Same error if I download the file and try a local install.
Build identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b5pre) Gecko/20100829 Firefox/4.0b5pre
This is happening also on a 20100827 Build.
The language pack seems to be fine, the only difference with a mozilla-1.9.2 language pack is that the content is not included in a .jar file (but the chrome.manifest seems to be updated for this).
I'm opening this bug in Firefox General because I honestly don't know which component would be more appropriate.
Comment 1•14 years ago
|
||
I'm pretty sure this is a dupe of bug 591387.
Status: NEW → RESOLVED
Closed: 14 years ago
Component: General → Build Config
QA Contact: general → build.config
Resolution: --- → DUPLICATE
Comment 2•14 years ago
|
||
Bug 591387 is fixed in Minefield/20100829 and I checked in AOM that it is.
Status: RESOLVED → REOPENED
Component: Build Config → Add-ons Manager
Product: Firefox → Toolkit
QA Contact: build.config → add-ons.manager
Resolution: DUPLICATE → ---
Comment 3•14 years ago
|
||
This is build config, and it's the same bug as bug 591387. If that's not FIXED, we'll need to reopen it.
Status: REOPENED → RESOLVED
Closed: 14 years ago → 14 years ago
Component: Add-ons Manager → Build Config
QA Contact: add-ons.manager → build-config
Resolution: --- → DUPLICATE
Assignee | ||
Updated•14 years ago
|
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
Assignee | ||
Comment 4•14 years ago
|
||
So where's the source for this, where's the install.rdf file in particular generated from?
Comment 5•14 years ago
|
||
Oops, there is a difference.
http://mxr.mozilla.org/mozilla-central/source/browser/locales/generic/install.rdf uses MOZ_APP_VERSION, theme uses FIREFOX_VERSION.
http://mxr.mozilla.org/mozilla-central/source/toolkit/locales/l10n.mk#86 is the callsite.
Assignee | ||
Comment 6•14 years ago
|
||
Updated•14 years ago
|
Flags: in-testsuite?
Comment on attachment 470390 [details] [diff] [review]
patch
This looks ok to me.
Attachment #470390 -
Flags: review?(khuey) → review+
Landing this requires backing out 591412.
Also, we can lose the AC_SUBST.
Assignee | ||
Comment 11•14 years ago
|
||
(In reply to comment #9)
> Landing this requires backing out 591412.
done
http://hg.mozilla.org/mozilla-central/rev/0f7c277c48d6
http://hg.mozilla.org/mozilla-central/rev/02c50330c493
(In reply to comment #10)
> Also, we can lose the AC_SUBST.
done
http://hg.mozilla.org/mozilla-central/rev/2936cee40d18
Status: ASSIGNED → RESOLVED
Closed: 14 years ago → 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b5
Comment 12•14 years ago
|
||
Verified fixed with Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b5pre) Gecko/20100831 Firefox/4.0b5pre
Before we have an automated test I'm sure we will have at least one manual and Mozmill test for it.
Status: RESOLVED → VERIFIED
Flags: in-litmus?
Updated•6 years ago
|
Product: Toolkit → Toolkit Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•