Bug 591783 - Fix for corrupt language pack install.rdf due to quotes in MOZ_APP_VERSION. r=khuey a=bustage-fix